# CoreQuote

./: .clineignore  .env.example  .gitignore  AGENTS.md  README.md  compose.yml  pyproject.toml
.codex/: config.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  real-job-test.yml
apps/streamlit/: main.py
apps/web/: README.md  components.json  package-lock.json  package.json
data/: corequote.db  slides.csv
docs/api/: auth.md  companies.md  cutlists.md  cutting-configs.md  cutting-ruleset-runtime-plan.md  libraries.md  pricing-logic.md  projects-quotes.md  rbac.md
docs/testing/: README.md  smith-kitchen-phase-1.md  smith-kitchen-phase-2.md  smith-kitchen-phase-3-fast-entry.md  smith-kitchen-phase-4-library-refresh.md  smith-kitchen-phase-5-workshop-handoff.md  smith-kitchen-ux-navigation-smoke.md
infra/: __init__.py
infra/data/: import_grass_hardware.py
infra/db/: README.md  __init__.py  apply_migrations.py  import_sqlite_libraries.py
planning/: roadmap.md
planning/issues/: 01-phase-1-quote-status-revisions.md  02-phase-1-quote-readiness-checklist.md  03-phase-1-missing-price-guidance.md  04-phase-1-cutlist-validation-warnings.md  05-phase-1-business-friendly-empty-states.md  06-phase-1-real-job-readiness-test.md  07-phase-2-client-quote-pdf.md  08-phase-2-workshop-cutting-schedule-export.md  09-phase-2-material-board-summary.md  10-phase-2-hardware-extras-pick-list.md  11-phase-2-quote-package-review.md  12-phase-2-output-real-job-test.md  13-phase-3-job-entry-speed-epic.md  (+3 more)
scripts/: create-github-planning.sh
src/: main.py
src/logic/: logic.py  (+6 more)
(+191 files in other folders)
