[project]
name = "corequote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fpdf2>=2.8.7",
    "pandas>=2.3.3",
    "streamlit>=1.55.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "packages/corequote-core"}

[tool.setuptools.packages.find]
where = ["packages/corequote-core"]
include = ["corequote_core*"]

[tool.pytest.ini_options]
pythonpath = [
    "packages/corequote-core",
    "apps/streamlit",
]
